2008-03-13  William Lachance  <wrlach@gmail.com>

	* clock.c: (find_entry_changed): Fix crash when there are no
	locations available. Fixes bug #521563.

==================== 2.22.0 ====================

2008-03-05  Jens Granseuer  <jensgr@gmx.net>

	* clock-face.c: (update_timeofday):
	* clock-location-tile.c: (clock_location_tile_fill):
	* clock-location.c: (guess_zone_from_tree):
	* clock-zonetable.c: (clock_zonetable_parse_location),
	(clock_zonetable_load_zonetab), (clock_zonetable_load_iso3166):
	* clock.c: (parse_gconf_cities), (run_prefs_edit_save),
	(run_find_location): fix build for compilers that don't like C99.
	Fixes bug #518895.

2008-03-03  Vincent Untz  <vuntz@gnome.org>

	Display sunrise/sunset in local (to the location) time.
	Fix bug #518106. Patch by Matthias Clasen <mclasen@redhat.com>

	* clock-location-tile.[ch]: (weather_info_setup_tooltip): hack to
	display the sunrise/sunset in local time
	(weather_tooltip): update
	* clock.c: (weather_tooltip): update

2008-02-28  David Zeuthen  <davidz@redhat.com>

	* set-timezone.c (can_do): Don't hardcode the polkit results for
	determining when we can authenticate to gain an
	authorization. This fixes a bug where ONE_SHOT auths weren't
	handled because PolKitResult enumerations for these were added
	after this code was written.
	(get_pk_context): Integrate libpolkit into the main loop. Need
	this to refresh the authorization cache. This fixes a bug where
	the Set buttons were not updated. Now it works as expected, e.g.
	the "Set..." becomes a "Set" if you gain the authorization (and
	it's not a one shot one)
	(pk_io_remove_watch_fn, pk_io_add_watch_fn)
	(pk_io_watch_have_data): libpolkit mainloop integration functions.

2008-02-28  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (clock_migrate_to_26): fix previous commit to not break the
	build

2008-02-28  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (clock_migrate_to_26): don't set the format key if we're