@@ -1001,12 +1001,6 @@ create_cities_store (ClockData *cd)
 
                 list = list->next;
 	}
-
-	if (cd->prefs_window) {
-                GtkWidget *widget = glade_xml_get_widget (cd->glade_xml, "cities_list");
-                gtk_tree_view_set_model (GTK_TREE_VIEW (widget),
-                                         GTK_TREE_MODEL (cd->cities_store));
-        }
 }
 
 static gint
@@ -3815,6 +3809,9 @@ fill_prefs_window (ClockData *cd)
 	renderer = gtk_cell_renderer_text_new ();
         col = gtk_tree_view_column_new_with_attributes (_("City Time Zone"), renderer, "text", COL_CITY_TZ, NULL);
         gtk_tree_view_insert_column (GTK_TREE_VIEW (widget), col, -1);
+	
+	if (cd->cities_store == NULL)
+		create_cities_store (cd);
 
         gtk_tree_view_set_model (GTK_TREE_VIEW (widget),
                                  GTK_TREE_MODEL (cd->cities_store));
