@@ -1,3 +1,8 @@
+2008-03-14  Matthias Clasen  <mclasen@redhat.com>
+
+	* clock.c (fill_prefs_window): Make sure that we create the
+	cities store before we fill the preference window. 
+
 2008-03-13  William Lachance  <wrlach@gmail.com>
 
 	* clock.c: (find_entry_changed): Fix crash when there are no
